--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<br>
 	<br>
 	<br>
+	 <div class="grid5">
+		<div class="gum13"><center><p style="color:black; font-size:98px">Go Buy Gum it makes you smarter.</p></center></div>
 	<div class="navbar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -16,6 +18,6 @@
 			<li><a href="where.html">Where to Go</a></li>
 		</ul>
 		</div>
-	<center><p style="color:black; font-size:98px">Go Buy Gum it makes you smarter.</p></center>
+		<center><img src="images/bubblekid.png"/></center>
 	</body>
 </html>
