--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<br>
 	<br>
 	 <div class="grid5">
-		<div class="gum13"><center><p style="color:black; font-size:98px">Go Buy Gum it makes you smarter.</p></center></div>
+		<div class="gum13"><center><p style="color:black; font-size:98px">Go Buy Gum it makes you Smarter.</p></center></div>
 	<div class="navbar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
